Major changes added to Delivery Executive Register form and Home page.

--- a/.hintrc
+++ b/.hintrc
@@ -17,7 +17,22 @@
         "link-name": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-moz-box-pack",
+          "-moz-box-align"
+        ]
+      }
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-active": "off"
+      }
+    ]
   },
   "browserslist": [
     "defaults",
