--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Program Files\\GlasssFish_Server\\glassfish;C:\\Progra
 j2ee.server.middleware=C:/Program Files/GlasssFish_Server
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\rouna\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
