Major changes in all pages, adding error popup and adding here and there twicks.

--- a/.hintrc
+++ b/.hintrc
@@ -32,7 +32,8 @@
       {
         "duplicate-id-active": "off"
       }
-    ]
+    ],
+    "meta-viewport": "off"
   },
   "browserslist": [
     "defaults",
