--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>DeliveryExecutiveSignUp</servlet-name>
-        <servlet-class>Platera.DeliveryExecutiveSignUp</servlet-class>
+        <servlet-class>DeliveryExecutive.DeliveryExecutiveSignUp</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>VerifyOTP</servlet-name>
@@ -10,7 +10,7 @@
     </servlet>
     <servlet>
         <servlet-name>Logout</servlet-name>
-        <servlet-class>Platera.Logout</servlet-class>
+        <servlet-class>General.Logout</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>VerifyOTP</servlet-name>
