--- a/.hintrc
+++ b/.hintrc
@@ -33,7 +33,13 @@
         "duplicate-id-active": "off"
       }
     ],
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
+    ]
   },
   "browserslist": [
     "defaults",
