--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,4 +21,8 @@
         <error-code>404</error-code>
         <location>/src/pages/Error/404Error.html</location> <!-- Correct path -->
     </error-page>
+     <error-page>
+        <error-code>500</error-code>
+        <location>/src/pages/Error/500Error.html</location> <!-- Correct path -->
+    </error-page>
 </web-app>
