--- a/.hintrc
+++ b/.hintrc
@@ -39,6 +39,12 @@
       {
         "image-alt": "off"
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   },
   "browserslist": [
