--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,10 +19,11 @@
     
     <error-page>
         <error-code>404</error-code>
-        <location>/src/pages/Error/404Error.html</location> <!-- Correct path -->
+        <location>/src/pages/Error/404Error.html</location> 
     </error-page>
-<!--     <error-page>
+    
+     <error-page>
         <error-code>500</error-code>
-        <location>/src/pages/Error/500Error.html</location>  Correct path 
-    </error-page>-->
+        <location>/src/pages/Error/500Error.html</location>
+    </error-page>
 </web-app>
