--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,13 +17,17 @@
         <url-pattern>/VerifyOTP</url-pattern>
     </servlet-mapping>
     
-    <error-page>
-        <error-code>404</error-code>
-        <location>/src/pages/Error/404Error.html</location> 
-    </error-page>
-    
-     <error-page>
-        <error-code>500</error-code>
-        <location>/src/pages/Error/500Error.html</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>404</error-code>-->
+<!--        <location>/src/pages/Error/404Error.html</location> -->
+<!--    </error-page>-->
+<!--    -->
+<!--     <error-page>-->
+<!--        <error-code>500</error-code>-->
+<!--        <location>/src/pages/Error/500Error.html</location>-->
+<!--    </error-page>-->
+
+        <welcome-file-list>
+            <welcome-file>index.html</welcome-file>
+        </welcome-file-list>
 </web-app>
